# UniverseMusicBackend

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/core/: db.rs  mod.rs
src/core/scanner/: file.rs  mod.rs  prober.rs
src/utils/: log.rs
